fixed right align for incoming msgs

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -58,13 +58,6 @@
     height:100%;
 }
 
-.chat_bubble{
-    padding:20px;
-    display:inline-block;
-    border:1px solid black;
-    border-radius:90%;
-}
-
 p.msg_right_align{
     text-align: right;
 }
